--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="code-solid.ico" />
     <script
       src="https://kit.fontawesome.com/e509ee224b.js"
       crossorigin="anonymous"
@@ -15,7 +15,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>DevConnector</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
